--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ language: android
 install: true
 jobs:
   include:
-    - stage: Build and Test
-      script: ./gradlew -p android-emulator-plugin # Build and validate fully
+    # - stage: Build and Test
+    #   script: ./gradlew -p android-emulator-plugin # Build and validate fully
       # Run all validations separately to speed up the build and avoid timeouts due to long builds.
     # - script: ./validate_plugin 1 # This is currently broken on Travis CI but not locally
     - script: ./validate_plugin 2
-    - script: ./validate_plugin 3
-    - script: ./validate_plugin 4
-    - script: ./validate_plugin 5
+    # - script: ./validate_plugin 3
+    # - script: ./validate_plugin 4
+    # - script: ./validate_plugin 5
     - stage: Deploy
       script: skip
       deploy:
